fix hambuger menu spacing

--- a/css/style.css
+++ b/css/style.css
@@ -806,7 +806,7 @@ body {
 }
 .navigation__icon {
   position: relative;
-  margin-top: 3.5rem;
+  margin-top: 1.5rem;
 }
 .navigation__icon, .navigation__icon::before, .navigation__icon::after {
   width: 3rem;
