--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -110,7 +110,7 @@
   // ICON
   &__icon {
     position: relative;
-    margin-top: 3.5rem;
+    margin-top: 1.5rem;
 
     &,
     &::before,
